# Standalone package — intentionally NOT a member of the root workspace.
# The empty [workspace] table below prevents Cargo from walking up to the root workspace.
[workspace]

[package]
name = "copypaste-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "copypaste_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "copypaste-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-positioner = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
home = "0.5"

[dev-dependencies]
tempfile = "3"
