[package]
name = "copypaste-ui"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Tauri desktop UI for the CopyPaste daemon (talks IPC over the Unix socket; does not link copypaste-core)"

[lib]
# `_lib` suffix keeps the lib name distinct from the bin on Windows.
name = "copypaste_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "copypaste-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { workspace = true }
serde_json.workspace = true
anyhow.workspace = true
home.workspace = true
tracing.workspace = true
copypaste-ipc = { path = "../../copypaste-ipc" }
# QR rendering for device pairing. `svg` feature on; the heavier `image`
# renderer stays off (we only emit an inline SVG string the frontend displays).
qrcode = { workspace = true, features = ["svg"] }
# Base64 encoding for the file-ingest path (drag-drop + file-picker).
# Pinned to the same major version used by copypaste-daemon.
base64 = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Translucent (NSVisualEffectView) window background for the JetBrains-style look.
window-vibrancy = "0.5"
# CGEventTap for intercepting OS-reserved shortcuts (Accessibility permission required).
core-graphics = { version = "0.25", features = ["highsierra"] }
core-foundation = "0.10"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString"] }
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication", "NSSound"] }
# Native UNUserNotificationCenter — lets the Tauri bundle post notifications
# that automatically show the app icon (CopyPaste.app) and rich preview text.
# Requires objc2 0.6.x + block2 0.6.x (different from the 0.5.x used by the
# older objc2-app-kit bindings; both versions coexist in the Cargo graph).
objc2-user-notifications = { version = "0.3", features = [
    "UNUserNotificationCenter",
    "UNNotificationContent",
    "UNNotificationRequest",
    "UNNotificationTrigger",
    "block2",
] }
block2 = ">=0.6.1, <0.8.0"
