[package]
name = "copypaste-ui"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Tauri desktop UI for the CopyPaste daemon (talks IPC over the Unix socket; does not link copypaste-core)"

[lib]
# `_lib` suffix keeps the lib name distinct from the bin on Windows.
name = "copypaste_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "copypaste-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { workspace = true }
serde_json.workspace = true
# anyhow removed: no `anyhow::Result` / `bail!` / `ensure!` usage in this crate.
# All IPC and Tauri commands use `Result<_, String>` directly. (CopyPaste-yorm)
home.workspace = true
tracing.workspace = true
# copypaste-ipc: pure types-only crate (serde + serde_json only, no
# copypaste-core dep). The UI uses METHOD_* constants from it so a rename of a
# daemon method is a compile-time error here rather than a silent runtime mismatch.
# NOTE: the local `IpcReply` struct intentionally diverges from
# `copypaste_ipc::Response`: IpcReply has no `id` field and uses
# `error_code: Option<String>` (owned, deserializable from wire JSON), whereas
# Response uses `Option<&'static str>` which cannot be deserialized from
# arbitrary wire strings. The local struct is therefore kept; only
# METHOD_* constants are imported. (CopyPaste-c4q2.6)
copypaste-ipc = { path = "../../copypaste-ipc" }
# QR rendering for device pairing. `svg` feature on; the heavier `image`
# renderer stays off (we only emit an inline SVG string the frontend displays).
qrcode = { workspace = true, features = ["svg"] }
# Base64 encoding for the file-ingest path (drag-drop + file-picker).
# Pinned to the same major version used by copypaste-daemon.
base64 = { workspace = true }
# UUID v4 for per-item temp-dir isolation in open_item_file (n7qv).
uuid.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# Translucent (NSVisualEffectView) window background for the JetBrains-style look.
window-vibrancy = "0.6"
# CGEventTap for intercepting OS-reserved shortcuts (Accessibility permission required).
core-graphics = { version = "0.25", features = ["highsierra"] }
core-foundation = "0.10"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "NSSound", "NSPasteboard", "NSAppearance", "NSView", "NSWindow"] }
raw-window-handle = "0.6"
# Native UNUserNotificationCenter — lets the Tauri bundle post notifications
# that automatically show the app icon (CopyPaste.app) and rich preview text.
# Requires objc2 0.6.x + block2 0.6.x (different from the 0.5.x used by the
# older objc2-app-kit bindings; both versions coexist in the Cargo graph).
objc2-user-notifications = { version = "0.3", features = [
    "UNUserNotificationCenter",
    "UNNotificationContent",
    "UNNotificationRequest",
    "UNNotificationTrigger",
    # UNNotificationSettings + UNAuthorizationStatus: used by
    # check_notification_permission (CopyPaste-44rq.28) to query
    # getNotificationSettingsWithCompletionHandler.
    "UNNotificationSettings",
    "block2",
] }
# objc2-foundation 0.3.x is required by objc2-user-notifications 0.3.x (which
# uses objc2 0.6.x).  We alias it so the post_un_notification code can use the
# correct NSString/NSError types that match the block signatures generated by
# objc2-user-notifications, while the rest of the crate continues to use the
# 0.2.x bindings that the older objc2-app-kit 0.2.x expects.
objc2-foundation-v3 = { package = "objc2-foundation", version = "0.3", features = ["NSString", "NSError"] }
# objc2 0.6.x alias — needed so post_un_notification can use Bool from the same
# major version as objc2-user-notifications 0.3.x (which requires objc2 0.6.x).
# The rest of the crate uses objc2 0.5.x via the `objc2 = "0.5"` dep above.
objc2-v6 = { package = "objc2", version = "0.6" }
block2 = ">=0.6.1, <0.8.0"
